--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -12,13 +12,9 @@ required for displaying ads.
       android:targetSdkVersion="24" />
   <!-- Google Mobile Ads Permissions -->
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
   <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-  <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES" />
   <!-- Uncomment to add billing for in-app purchase ads -->
   <!--<uses-permission android:name="com.android.vending.BILLING"/> -->
   <application  android:theme="@style/UnityThemeSelector" 
@@ -34,12 +30,12 @@ required for displaying ads.
             </intent-filter>
         </activity>
 
-        <!-- Include the AdcashInterstitialActivity -->
+        <!-- Include the AdcashActivity -->
         <activity
             android:name="com.adcash.mobileads.ui.AdcashActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:hardwareAccelerated="true"
-            android:theme="@android:style/Theme.Translucent" />
+            android:theme="@style/AdcashTheme" />
    
   </application>
   
